     for timings and suggestion.

  o  FR #2456 implemented - rbindlist will choose the highest type per column, not the first. Up-conversion 
     follows R defaults, with the addition of factors being the highest type. This also fixes bug #4981 (same 
	 as the FR but for the specific case of NA's).

  o  cbind will dispatch to data.table if any argument is a data.table. Key is now set directly, without a sort
     and is equal to c(key1, key2, ...).

  o  FR #4856 implemented (same as #5019). rbind/rbindlist will preserve ordered factors if it's possible
     to do so, i.e. if a compatible global order exists. Otherwise the result will be a factor and a warning.

  o  FR #4790 - rbind now has a "fill" argument. When fill=TRUE it will behave in a manner similar to
     plyr's rbind.fill. This option is incompatible with use.names=FALSE. Thanks to Arunkumar Srinivasan for
     the base code.

  o  FR #2115 - rbind now relies exclusively on rbindlist to bind data.table's together. This makes rbind'ing
     factors faster.

  o  FR #4867 is now implemented. `DT[, as.factor('x'), with=FALSE]` where `x` is a column in `DT`, is now 
     equivalent to `DT[, "x", with=FALSE]` instead of ending up with an error. Thanks to tresbot for reporting 
	 on SO: http://stackoverflow.com/questions/18525976/converting-multiple-data-table-columns-to-factors-in-r

  o  `format.data.table` now understands "formula" and displays embedded formulas as expected, FR #2591.

  o  FR #2496 is now implemented to trap and remove the `{` around `:=` in `j` to obtain desired result. Now, 
     `DT[, { `:=`(...)}]` and `DT[, {`:=`(...)}, by=(...)]` both work as intended, but with a warning. Thanks to 
     Alex for reporting on SO: http://stackoverflow.com/questions/14541959/expression-syntax-for-data-table-in-r

  o  Implemented FR #2693 from mnel's and Gabor's points (here: http://r.789695.n4.nabble.com/Problem-with-FAQ-2-8-tt4668878.html)